# DeskMediaDeviceV2

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONSOLE_PATTERNS_REGISTRY.md  CORE_PINNING_PLAN.md  GEOCODING_AND_WEATHER_API_PLAN.md  OPTIMIZATION_REVIEW_2026-06-13.md  OTA_INFRASTRUCTURE_OPTIONS.md  SESSION_2026-06-11_reset_fix.md  UI_INTEGRATION_REVIEW.md  WEATHER_API_INTEGRATION_PLAN.md  build.ps1  build_status.bat.DROPPED  cleanup_build_artifacts.bat  editMeTest.txt  filter_monitor.bat  fix_ui_export.py  flash.ps1  monitor.ps1  parse_logs.bat  parse_logs.ps1  partitions.csv  preflight_and_clean.bat  preflight_and_clean.bat.OLD  preflight_and_clean.ps1  preflight_check.bat  reset_fix_changes.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
HANDOFF_FOLDER/: BOARD_TIPS_AND_QUIRKS.md  CODE_SIDE_FIXES.md  COUNTER_DRONE_CONCEPT_NOTE.md  EFFICIENCY_SYSTEM.md  MEDIA_REQUIREMENTS_VIDEO_PLAYER.md  MONITOR_CRASH_INVESTIGATION.md  MP3_CONVERSION_GUIDE.md  NEXT_SESSION_PREP_JUNE02_2026.md  NWS_MIGRATION_PLAN.md  PROJECT_OVERVIEW.md  PROJECT_OVERVIEW_SESSION3.md  SESSION_SUMMARY_2026-06-03.md  SESSION_SUMMARY_2026-06-04.md  SESSION_SUMMARY_2026-06-04b.md  SESSION_SUMMARY_2026-06-05.md  SESSION_SUMMARY_2026-06-05b.md  SESSION_SUMMARY_2026-06-05c.md  SESSION_SUMMARY_2026-06-05d.md  SESSION_SUMMARY_2026-06-06.md  SESSION_SUMMARY_2026-06-06b.md  SESSION_SUMMARY_2026-06-07.md  SESSION_SUMMARY_2026-06-07b.md  SESSION_SUMMARY_2026-06-10.md  SESSION_SUMMARY_JUNE02_2026.md  SESSION_SUMMARY_MAY31_2026.md  TRAUMA_TEAM_HELMET_AR_PLAN.md  TURRET_SENTRY_DESIGN_PLAN.md  VIDEO_PLAYER_ATTEMPTS.md  WEAPON_ROUND_COUNTER_PLAN.md  WEATHER_INTEGRATION_HANDOFF.md  WEATHER_PROXY_CACHE_PLAN.md  home_styles_backup.c
UI/: DESK MEDIA DEVICEV2 UI.slvp  desktop.ini
UI/DESK MEDIA DEVICEV2 UI_UIFiles/: CMakeLists.txt  GUI.h
UI/DESK MEDIA DEVICEV2 UI_UIFiles/behavior/: events.c
UI/DESK MEDIA DEVICEV2 UI_UIFiles/components/: background_img_component.h
UI/DESK MEDIA DEVICEV2 UI_UIFiles/core/: gui_core.h
UI/DESK MEDIA DEVICEV2 UI_UIFiles/screens/: networkselector.c
UI/DESKMEDIADEVICEV2UI_UIFiles/: filelist.txt
UI/DESKMEDIADEVICEV2UI_UIFiles/components/: background_img_component.c  comp_hook.c  comp_hook.h
UI/DESKMEDIADEVICEV2UI_UIFiles/core/: gui_core.c  theme_manager.c  ui_theme_manager.c  variables.c
UI/DESKMEDIADEVICEV2UI_UIFiles/helpers/: ui_helpers.h
UI/DESKMEDIADEVICEV2UI_UIFiles/screens/: home.c  keyboardzipcode.c  screen.c  settingswindow.c
UI/Tempra Control_UIFiles/: CMakeLists.txt  GUI.h  filelist.txt
UI/Tempra Control_UIFiles/components/: background_img_component.c  background_img_component.h  comp.c  comp.h  comp_hook.c  comp_hook.h
UI/Tempra Control_UIFiles/core/: gui_core.c  gui_core.h  ui_theme_manager.h  variables.c  variables.h
UI/Tempra Control_UIFiles/helpers/: ui_helpers.c
UI/Tempra Control_UIFiles/screens/: home.c  keyboardpassword.c
UI/mergeUI/: CMakeLists.txt  GUI.h  filelist.txt
UI/mergeUI/components/: comp.h  comp_hook.c  comp_hook.h  textarea_component.c  textarea_component.h
UI/mergeUI/core/: gui_core.h  variables.c  variables.h
UI/mergeUI/screens/: home.c  keyboardpassword.c  keyboardzipcode.c  networkselector.c  screen.c  settingswindow.c
components/esp32_p4_wifi6_touch_lcd_4_3/: esp32_p4_wifi6_touch_lcd_4_3.c
components/squareline_ui/: CMakeLists.txt
components/squareline_ui/UIFiles/: CMakeLists.txt  GUI.h  filelist.txt
components/squareline_ui/UIFiles/assets/images/: upload_down1_991ef596d2b7435c9663fdfd256c222a_png.c  upload_network_e6b6f98e6cbd4491bfe5310d621d416f_png.c  upload_play_6c36b149bbde4d87af41769e62ca887f_png.c
components/squareline_ui/UIFiles/assets/styles/: global_styles.c
components/squareline_ui/UIFiles/behavior/: events.c
components/squareline_ui/UIFiles/core/: gui_core.h  variables.c  variables.h
components/squareline_ui/UIFiles/screens/: home.c  keyboardpassword.c  keyboardzipcode.c  networkselector.c  screen.c
docs/: behaviors and rules.md  examples_tree.txt  tips from sessions.txt
gui squareline files/: DESK MEDIA DEVICEV2 UI.slvp
gui squareline files/917/: GUI.h
gui squareline files/917/behavior/: animations.c
gui squareline files/917/components/: comp.c  comp.h
gui squareline files/917/core/: gui_core.h  theme_manager.h  variables.c  variables.h
gui squareline files/917/screens/: home.c  networkselector.c  (+1 more)
gui squareline files/DESK MEDIA DEVICEV2 UI_UIFiles (1)/: CMakeLists.txt  GUI.h
gui squareline files/DESK MEDIA DEVICEV2 UI_UIFiles (1)/assets/fonts/: label_1.c
gui squareline files/DESK MEDIA DEVICEV2 UI_UIFiles (1)/assets/images/: upload_11s_7c1fa968af52485bbeb874d89e56f96b_png.c  upload_15_3a414dd3d7e14d559033812d417eaa90_png.c  upload_35_cc7cb52862b9422aba85d07b935bc63c_png.c
gui squareline files/DESK MEDIA DEVICEV2 UI_UIFiles (1)/assets/styles/: global_styles.c
gui squareline files/DESK MEDIA DEVICEV2 UI_UIFiles (1)/core/: gui_core.h  variables.c  variables.h
gui squareline files/DESK MEDIA DEVICEV2 UI_UIFiles (1)/screens/: home.c  keyboardzipcode.c  settingswindow.c
main/: CMakeLists.txt  audio.h  content_sync.c  content_sync.h  default_content_manifest.json  es8311_minimal.c  es8311_minimal.h  idf_component.yml  main.c  ota_update.c  ota_update.h  power_gate.c  power_gate.h  video_player.c  video_player.h  weather_display.c  weather_display.h  weather_icons.c  weather_icons.h  wifi_manager.c  wifi_manager.h
main/storage/: nvs_storage.c  nvs_storage.h
main/ui/: data_binding.c  data_binding.h  network_selector.c  network_selector.h  settings.c  settings.h
main/weather/: nws_api.c  nws_api.h  weather_api.c  weather_api.h  weather_data.c  weather_data.h  weather_task.c  weather_task.h  wmo_icon_map.c  wmo_icon_map.h
scripts/: filter_monitor.bat  parse_logs.bat  summarize_diff.bat
tools/: catch_boot_log.ps1  flash_and_reset.ps1  reset_esp32p4.py
windowsapps/: dual_terminal.py  dual_terminal_config.json  key_debug.py  run_dual_terminal.bat  run_toolbar.bat  sd_converter.py  toolbar.py  toolbar_config.json
windowsapps/converter/: run_converter.bat  sd_converter.py  sd_converter.pyw
(+82 files in other folders)
