idf_component_register(
    SRCS
        main.c
        video_player.c
        weather/weather_data.c
        weather/weather_api.c
        weather/nws_api.c
        weather/weather_task.c
        weather/wmo_icon_map.c
        storage/nvs_storage.c
        ui/data_binding.c
        ui/settings.c
        ui/network_selector.c
        wifi_manager.c
        weather_icons.c
        weather_display.c
        ota_update.c
        content_sync.c
        power_gate.c
    EMBED_TXTFILES
        default_content_manifest.json
    INCLUDE_DIRS
        .
        weather
        storage
        ui
    REQUIRES
        squareline_ui
        esp_http_client
        esp_https_ota
        app_update
        cjson
        nvs_flash
        freertos
        driver
        bsp_extra
        esp32_p4_wifi6_touch_lcd_4_3
        esp_codec_dev
        esp_lvgl_adapter
        esp_driver_jpeg
        esp_lcd
        esp_mm
        lvgl
        chmorgan__esp-libhelix-mp3
        esp_wifi_remote
        esp_wifi
        esp_event
        esp_netif
        lwip
        mbedtls
)

