SET( SOURCES
    assets/fonts/display_1.c
    assets/fonts/fixed23.c
    assets/fonts/header_1.c
    assets/fonts/label_1.c
    assets/fonts/number_1.c
    assets/fonts/subtitle_1.c
    assets/fonts/title_1.c
    assets/images/upload_11_d928da2afce943088fc003fded319081_png.c
    assets/images/upload_11s_7c1fa968af52485bbeb874d89e56f96b_png.c
    assets/images/upload_12_71141d8aba63422c8a7377026b8cecc6_png.c
    assets/images/upload_12s_7ed83dc3cb5f41f1a541dfd52ba15f5c_png.c
    assets/images/upload_14_14ff6d55212c4e7b945e173b90b81139_png.c
    assets/images/upload_14s_b570241f67234745a56f9ddc06bd7800_png.c
    assets/images/upload_15_3a414dd3d7e14d559033812d417eaa90_png.c
    assets/images/upload_15s_71a05d920e1a428e86707846a7f46127_png.c
    assets/images/upload_18_b42c444b7f1445fc9003e4caa65d5a60_png.c
    assets/images/upload_18s_e55d60ec77034c32846327663b493f72_png.c
    assets/images/upload_19_2425f3503fc04098b87dd50fc6604b61_png.c
    assets/images/upload_19s_c04d370ce95c403b82416b454729a8a8_png.c
    assets/images/upload_1_7fa59a4c14414e4ab42f8f8cf8ee5df8_png.c
    assets/images/upload_1s_a942bd7a65904cab870f8cf337226275_png.c
    assets/images/upload_22_6dccc7824e764e4a9b70ff8d5b078fad_png.c
    assets/images/upload_22s_f739a4fff8ce46c5a09433c09b5b94c6_png.c
    assets/images/upload_26_28f0c2296c7742bbad7e6ed91f80b81a_png.c
    assets/images/upload_26s_731f337d30e945da969f8e1271adfa24_png.c
    assets/images/upload_2_e2278bcef5404f3da02d7aa2a510f534_png.c
    assets/images/upload_2s_37e4aa2fa7024542b513edb68eebbfa3_png.c
    assets/images/upload_33_b02a9c2486c94766bd9856f56db21f1f_png.c
    assets/images/upload_33s_b5e096b136ce4b6fbf7748e265b3d5eb_png.c
    assets/images/upload_34_4c27b41ae3a1496089c4d14141615cbd_png.c
    assets/images/upload_34s_d824cbffe8e8400cabc43e41608fd72d_png.c
    assets/images/upload_35_cc7cb52862b9422aba85d07b935bc63c_png.c
    assets/images/upload_35s_7a2b8dbb6e8a4c1d8a796fed8458d198_png.c
    assets/images/upload_3_20748ad6e84045c396cda8b366aa5d07_png.c
    assets/images/upload_3s_e6f8aad40a204657b22d932c4b20fb18_png.c
    assets/images/upload_7_5e6957ba671848fcae58518a4764438c_png.c
    assets/images/upload_7s_c385fe6874fa4da5853f367e29db7db4_png.c
    assets/images/upload_bg2_8b751f9997764edca3d7f03db3dd4a54_png.c
    assets/images/upload_menusettings_ac03cce753704d6fa240fb7acbd315c1_png.c
    assets/images/upload_network_e6b6f98e6cbd4491bfe5310d621d416f_png.c
    assets/images/upload_networkred_45539a8ee52f46688e0fbeb4c45b9ddf_png.c
    assets/styles/global_styles.c
    behavior/animations.c
    behavior/events.c
    components/background_img_component.c
    components/comp.c
    components/comp_hook.c
    core/gui_core.c
    core/theme_manager.c
    core/ui_theme_manager.c
    core/variables.c
    helpers/ui_helpers.c
    screens/home.c
    screens/keyboardpassword.c
    screens/keyboardzipcode.c
    screens/networkselector.c
    screens/screen.c
    screens/settingswindow.c
)

add_library( GUI ${SOURCES} )

